--- a/connector-definition/template/package.json
+++ b/connector-definition/template/package.json
@@ -8,12 +8,18 @@
     "watch": "nodemon --exec ts-node index.ts serve --configuration ./ --pretty-print-logs"
   },
   "dependencies": {
+    "@hasura/ndc-duckduckapi": "file:///../../ndc-duckduckapi",
     "@hasura/ndc-lambda-sdk": "^1.9.0",
+    "@myriaddreamin/typst-ts-node-compiler": "^0.5.4",
+    "@resvg/resvg-js": "^2.6.2",
     "@tsconfig/node20": "^20.1.4",
-    "ts-node": "^10.9.2",
-    "@hasura/ndc-duckduckapi": "file:///../../ndc-duckduckapi"
+    "echarts": "^5.6.0",
+    "lodash": "^4.17.21",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/echarts": "^4.9.22",
+    "@types/lodash": "^4.17.14",
     "dotenv-cli": "^7.4.2"
   }
 }
